--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>hello world</title>
-</head>
-<body>
+ <link rel="stylesheet" type=text/css href="estilo.css">
+ <head>
+  <title>hello world</title>
+ </head>
+ <body>
 
-<h1>html prueba</h1>
-<p>algo interesante</p>
+  <h1>html prueba</h1>
+  <p>algo interesante</p>
 
-</body>
+ </body>
 </html>
