--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
  </head>
  <body>
 
-  <h1>html prueba</h1>
-  <p>algo interesante</p>
+  <h1>html prueba con color</h1>
+  <p>algo interesante con color</p>
 
  </body>
 </html>
