--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
- <link rel="stylesheet" type=text/css href="estilo.css">
+ <link rel="estilo" type=text/css href="estilo.css">
  <head>
   <title>hello world</title>
  </head>
