--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  </head>
  <body>
 
-  <h1>html prueba con color</h1>
+  <h1>html prueba con color 2</h1>
   <p>algo interesante con color</p>
 
  </body>
