--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
- <link rel="estilo" type=text/css href="estilo.css">
+ <link rel="stylesheet" type=text/css href="stylesheet.css">
  <head>
   <title>hello world</title>
  </head>
  <body>
 
-  <h1>html prueba con color 2</h1>
+  <h1>html prueba con color 3</h1>
   <p>algo interesante con color</p>
 
  </body>
