--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <h1>html prueba con color 3</h1>
   <p>algo interesante con color</p>
+  
+  <img src="https://www.freepik.es/foto-gratis/bien-cuidado-retrato-mujer-joven-hermosa-sobre-fondo-blanco-estudio-concepto-cosmetica-maquillaje-tratamiento-natural-ecologico-cuidado-piel-aspecto-brillante-saludable-moda-salud-copyspace_11530227.htm" alt="hoja y chica">
 
  </body>
 </html>
