--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>html prueba con color 3</h1>
   <p>algo interesante con color</p>
   
-  <img src="https://image.freepik.com/foto-gratis/bien-cuidado-retrato-mujer-joven-hermosa-sobre-fondo-blanco-estudio-concepto-cosmetica-maquillaje-tratamiento-natural-ecologico-cuidado-piel-aspecto-brillante-saludable-moda-salud-copyspace_155003-23270.jpg" alt="hoja y chica">
+  <img src="https://image.freepik.com/foto-gratis/bien-cuidado-retrato-mujer-joven-hermosa-sobre-fondo-blanco-estudio-concepto-cosmetica-maquillaje-tratamiento-natural-ecologico-cuidado-piel-aspecto-brillante-saludable-moda-salud-copyspace_155003-23270.jpg" alt="hoja y chica" width="128" height="128">
 
  </body>
 </html>
