--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <p>algo interesante con color</p>
   
   <p>
-   <img src="https://image.freepik.com/foto-gratis/bien-cuidado-retrato-mujer-joven-hermosa-sobre-fondo-blanco-estudio-concepto-cosmetica-maquillaje-tratamiento-natural-ecologico-cuidado-piel-aspecto-brillante-saludable-moda-salud-copyspace_155003-23270.jpg" alt="hoja y chica" style="float:left;width="110" height="110">
+   <img src="https://image.freepik.com/foto-gratis/bien-cuidado-retrato-mujer-joven-hermosa-sobre-fondo-blanco-estudio-concepto-cosmetica-maquillaje-tratamiento-natural-ecologico-cuidado-piel-aspecto-brillante-saludable-moda-salud-copyspace_155003-23270.jpg" alt="hoja y chica" style="float:left;width:90px;height:90">
 No se como separar los que meto nuevo en html de css, como organizar carpetas, cambios y nuevas entradas.
 </p>
  </body>
